--- a/tmux.conf
+++ b/tmux.conf
@@ -12,7 +12,7 @@ set -g renumber-windows on
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # if "test ! -d ~/.config/tmux/plugins/tpm" \
