--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
-set-option -g prefix C-a
+# set-option -g prefix C-a
 
 set-option -g history-limit 5000
 
